--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "3.2.1",
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -16,7 +17,7 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
-    "prisma": "^3.2.1",
+    "prisma": "3.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
